# pygments-texth

./: .gitignore  README.md  commands.sh  index.adoc  output.html  pyproject.toml  requirements.txt  syllables.rb
src/sentence/: __init__.py  lexer.py  nlp.py  style.py  train.py
src/test/: test.py
test/: input.sentence
test/inputs/: es.sentence
